--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "pokedex-api",
-  "version": "1.0.0",
-  "description": "Pokedex API",
-  "main": "main.js",
-  "scripts": {
-    "lint": "npx oxlint .",
-    "lint:fix": "npx oxlint --fix ."
-  },
-  "author": "Alex Curran",
-  "license": "ISC",
-  "devDependencies": {
-    "oxlint": "^1.28.0"
-  }
+    "name": "pokedex-api",
+    "version": "1.0.0",
+    "description": "Pokedex API",
+    "main": "main.js",
+    "scripts": {
+        "lint": "npx oxlint .",
+        "lint:fix": "npx oxlint --fix .",
+        "format": "npx prettier . --write"
+    },
+    "author": "Alex Curran",
+    "license": "ISC",
+    "devDependencies": {
+        "oxlint": "^1.28.0",
+        "prettier": "3.6.2"
+    }
 }
