--- a/.oxlintrc.jsonc
+++ b/.oxlintrc.jsonc
@@ -1,6 +1,6 @@
 {
-  "categories": {
-    "correctness": "error",
-    "suspicious": "warn"
-  }
+    "categories": {
+        "correctness": "error",
+        "suspicious": "warn",
+    },
 }
