--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "module": "ES6",
-        "target": "es6"
+        "module": "esnext",
+        "target": "esnext"
     },
     "exclude": ["node_modules"]
 }
