--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
     "description": "Pokedex API",
     "main": "main.js",
     "scripts": {
+        "dev": "npx serve",
         "lint": "npx oxlint .",
         "lint:fix": "npx oxlint --fix .",
-        "format": "npx prettier . --write"
+        "format": "npx prettier . --write",
+        "cy:open": "npx cypress open"
     },
     "author": "Alex Curran",
     "license": "ISC",
     "devDependencies": {
+        "cypress": "^15.7.1",
         "oxlint": "^1.28.0",
-        "prettier": "3.6.2"
+        "prettier": "3.6.2",
+        "serve": "^14.2.5"
     }
 }
