--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "lint": "npx oxlint .",
         "lint:fix": "npx oxlint --fix .",
         "format": "npx prettier . --write",
-        "cy:open": "npx cypress open"
+        "cy:open": "npx cypress open",
+        "cy:run": "npx cypress run"
     },
     "author": "Alex Curran",
     "license": "ISC",
